# Exercicios

./: CMakeLists.txt  blank.c  exercicios  exercicios.txt  lista-duplamente-ligada.c  lista-duplamente-ligada.h  main.c  ppp1.1.1.c  ppp1.1.4.c  ppp1.2.2.c  ppp2.1.1.c  ppp2.2.2.c  ppp2.2.3.c  ppp2.2.4.c  ppp2.2.5.c  ppp2.2.6.c  ppp3.1.1.c  ppp3.1.2.c  ppp3.1.3.c  ppp3.2.3.c  ppp4.2.1.c  ppp4.2.12-aux.c  ppp4.2.2.c  ppp4.2.3.c  ppp4.2.4.c  prog9.2.3.c  prog9.2.7.c  struct.c
Folha_1/: ppp1.1.3.c  ppp1.2.1.c  ppp2.1.2.c  ppp2.1.3.c  ppp2.2.1.c  ppp2.2.7.c  ppp2.3.2.c  ppp3.1.4.c  ppp3.1.5.c  ppp3.2.2.c  ppp4.1.1.c  ppp4.2.12.c  ppp4.2.13-aux.c  ppp4.2.13.c  ppp4.2.9.c
Folha_2/: ppp5.1.1.c  ppp5.1.2.c  ppp5.1.4.c  ppp5.2.1.c  ppp5.2.2.c  ppp5.2.4.c  ppp6.1.1.c  ppp6.1.2.c  ppp6.1.6.c  ppp6.2.3.c  ppp7.1.1.c  ppp7.1.1a.c  ppp7.1.2.c  ppp7.1.3.c  ppp7.1.4.c
Folha_3/: ppp8.2.1.c
Folha_4/: ppp11.1.1.c
Folha_4/ppp11.1.5/: arvbin-ficheiros.c  arvbin.c  arvbin.h  ppp11.1.5-p2.c
