cmake_minimum_required(VERSION 3.17)
project(ExerciciosPPP C)

set(CMAKE_C_STANDARD 11)

add_executable(Exercicios Folha_4/ppp11.1.5/arvbin.c
        Folha_4/ppp11.1.5/arvbin.h
        Folha_4/ppp11.1.5/arvbin-ficheiros.c
        Folha_4/ppp11.1.5/lib-utf8.c
        Folha_4/ppp11.1.5/lib-utf8.h
        Folha_4/ppp11.1.5/ppp11.1.5-p2.c)

